fix: spacing

--- a/src/components/contact/contact.component.css
+++ b/src/components/contact/contact.component.css
@@ -1,11 +1,9 @@
 .main-contact {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: left;
     padding: 2rem;
-    min-height: 40vh;
     box-sizing: border-box;
     max-width: 700px;
     margin: 0 auto;
